--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,16 @@
 		"sass": "^1.32.13",
 		"yup": "^0.32.9"
 	},
+	"devDependencies": {
+		"@types/jest": "^26.0.23",
+		"@types/node": "^15.3.0",
+		"@types/react": "^17.0.5",
+		"@types/react-dom": "^17.0.5",
+		"@types/react-redux": "^7.1.16",
+		"@types/redux": "^3.6.0",
+		"@types/redux-thunk": "^2.1.0",
+		"typescript": "^4.2.4"
+	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -25,26 +35,10 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": [ "react-app", "react-app/jest" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@types/react-redux": "^7.1.16",
-		"@types/redux": "^3.6.0",
-		"@types/redux-thunk": "^2.1.0"
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	}
 }
