--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,15 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^26.0.23",
+		"@types/mocha": "^8.2.2",
 		"@types/node": "^15.3.0",
 		"@types/react": "^17.0.5",
 		"@types/react-dom": "^17.0.5",
 		"@types/react-redux": "^7.1.16",
 		"@types/redux": "^3.6.0",
+		"@types/redux-mock-store": "^1.0.2",
 		"@types/redux-thunk": "^2.1.0",
+		"redux-mock-store": "^1.5.4",
 		"typescript": "^4.2.4"
 	},
 	"scripts": {
@@ -35,10 +38,21 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [ "react-app", "react-app/jest" ]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
